# pg-database-utils

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: python-tests.yml
pg_database/: conf.py  schema.py  sql.py  types.py  validation.py
pg_database/tests/: custom_databases.json  custom_databases.py  invalid_config.json  invalid_settings.py  missing_django_db.json  missing_django_db.py  not_settings.py  settings.py  test_config.json  tests.py
